--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <select id="data-select">
             <option value="cases">Cases</option>
             <option value="deaths">Deaths</option>
-            <option value="population">Population</option> 
+            <option value="vaccinationRate">Vaccination Rate</option>
         </select>
     </div>
     <div id="map"></div>
-    <div id="tooltip"></div> 
+    <div id="tooltip"></div>
     <script src="script.js"></script>
 </body>
 </html>
