--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div id="controls">
-        <select id="data-select">
-            <option value="cases">Cases</option>
-            <option value="deaths">Deaths</option>
-            <option value="vaccination">Vaccination Rate</option> <!-- Match the option value with the script -->
-        </select>
+        <label><input type="radio" name="data-type" value="cases" checked> Cases</label>
+        <label><input type="radio" name="data-type" value="deaths"> Deaths</label>
+        <label><input type="radio" name="data-type" value="vaccination"> Vaccination Rate</label>
+        <br>
+        <label><input type="radio" name="time-period" value="monthly" checked> Monthly</label>
+        <label><input type="radio" name="time-period" value="yearly"> Yearly</label>
     </div>
     <div id="map"></div>
     <div id="tooltip" style="position: absolute; visibility: hidden; padding: 10px; background-color: white; border: 1px solid #ccc; border-radius: 5px; pointer-events: none;"></div>
