--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>CDC COVID-19 Data Viewer</title>
+    <link rel="stylesheet" type="text/css" href="style.css">  <!-- Link to the external CSS file -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
-    <style>
-        /* Add styles here for differentiating the views with unique colors */
-        .cases { fill: blue; }
-        .deaths { fill: red; }
-        .vaccination { fill: green; }
-    </style>
 </head>
 <body>
     <h1>CDC COVID-19 Data Viewer</h1>
@@ -22,6 +17,6 @@
 
     <div id="map"></div>
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
