--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CDC COVID-19 Data Viewer</title>
-    <link rel="stylesheet" type="text/css" href="style.css">  <!-- Link to the external CSS file -->
+    <link rel="stylesheet" type="text/css" href="style.css">  
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
 </head>
@@ -17,6 +17,6 @@
 
     <div id="map"></div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script>  
 </body>
 </html>
