--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COVID-19 Data Visualization</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <title>CDC COVID-19 Dashboard</title>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>COVID-19 Data Visualization</h1>
-    <div>
-        <select id="dataSelect">
+    <h1>CDC COVID-19 Dashboard</h1>
+    <div id="map"></div>
+    <div id="controls">
+        <label for="data-select">View:</label>
+        <select id="data-select">
             <option value="cases">Cases</option>
             <option value="deaths">Deaths</option>
-            <option value="vaccinations">Vaccination Progress</option>
+            <option value="vaccination">Vaccination Progress</option>
         </select>
     </div>
-    <div id="map"></div>
     <script src="script.js"></script>
 </body>
 </html>
