--- a/index.html
+++ b/index.html
@@ -2,23 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CDC COVID-19 Dashboard</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://d3js.org/topojson.v3.min.js"></script>
+    <title>COVID-19 Data Visualization</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="https://d3js.org/topojson.v3.min.js"></script>
 </head>
 <body>
-    <h1>CDC COVID-19 Dashboard</h1>
-    <div id="map"></div>
     <div id="controls">
-        <label for="data-select">View:</label>
         <select id="data-select">
             <option value="cases">Cases</option>
             <option value="deaths">Deaths</option>
-            <option value="vaccination">Vaccination Progress</option>
+            <option value="vaccination">Vaccination</option>
         </select>
     </div>
+    <div id="map"></div>
+    <div id="tooltip" style="position: absolute; visibility: hidden; padding: 10px; background-color: white; border: 1px solid #ccc; border-radius: 5px; pointer-events: none; z-index: 10;"></div>
     <script src="script.js"></script>
 </body>
 </html>
